# SBOM-Analyser

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  SBOM_Analyzer_Implementation_Plan.md  SCORING.md  SbomREADME.md  pyproject.toml
.claude/: settings.local.json
data/: .gitkeep
reports/: .gitkeep
scripts/: data_integrity.py  engine_check.py  evaluate.py  generate_sample_data.py  run_analysis.py
src/sbom_analyzer/: __init__.py  config.py
src/sbom_analyzer/analysis/: __init__.py  classify.py  licenses.py  maintenance.py  transitive.py  vulnerabilities.py
src/sbom_analyzer/api/: __init__.py  main.py
src/sbom_analyzer/graph/: __init__.py  builder.py  traversal.py
src/sbom_analyzer/ingestion/: __init__.py  loaders.py
src/sbom_analyzer/llm/: __init__.py  cache.py  client.py  prompts.py  reasoners.py
src/sbom_analyzer/models/: __init__.py  entities.py  findings.py
src/sbom_analyzer/reporting/: __init__.py  html.py  report.py
src/sbom_analyzer/reporting/templates/: report.html.j2
src/sbom_analyzer/scoring/: __init__.py  risk.py
src/sbom_analyzer/static/: app.html  applications.html  console.css  console.js  dashboard.html  finding.js  findings.html  graph.html  upload.html
tests/: conftest.py  test_api.py  test_api_and_llm.py  test_contracts.py  test_detection.py  test_graph_traversal.py  test_licenses.py  test_llm_fallbacks.py  test_metrics.py  test_pipeline.py  test_reporting_html.py  test_scoring.py  test_version_matching.py
